welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: expected class or object definition
def fonctionTest() : Boolean={
^ColumnByColumn:13: error: expected class or object definition
def Colonne(){
^